--- a/hcse-parent/pom.xml
+++ b/hcse-parent/pom.xml
@@ -13,4 +13,9 @@
         <module>hcse-ui</module>
         <module>hcse-app</module>
     </modules>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
+
 </project>
