--- a/hcse-parent/hcse-ui/pom.xml
+++ b/hcse-parent/hcse-ui/pom.xml
@@ -11,6 +11,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.example</groupId>
             <artifactId>hcse-core</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -25,5 +32,16 @@
             <artifactId>javafx-fxml</artifactId>
             <version>21</version>
         </dependency>
+
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
